--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.1.0",
     "@stedi/prettier-plugin-jsonata": "^2.0.0",
     "bootstrap": "^5.2.3",
+    "js-yaml": "^4.1.0",
     "monaco-editor": "^0.41.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-monaco-editor-v2": "^16.0.1",
@@ -40,6 +41,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/js-yaml": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.49.0",
