--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,6 +31,8 @@ jobs:
           node-version: "18.x"
       - name: Install dependencies
         run: npm ci
+      - name: Install ng
+        run: npm install -g @angular/cli
       - name: Build
         run: ng build --configuration production
       - name: Archive build
@@ -54,7 +56,7 @@ jobs:
         uses: actions/checkout@v1
       - uses: azure/login@v1
         with:
-          creds:  ${{ secrets.AZURE_CREDENTIALS }} 
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Download build
         uses: actions/download-artifact@v1
         with:
