--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -31,10 +31,8 @@ jobs:
           node-version: "18.x"
       - name: Install dependencies
         run: npm ci
-      - name: Install ng
-        run: npm install -g @angular/cli
       - name: Build
-        run: ng build --configuration production
+        run: npm run build:ci
       - name: Archive build
         if: success()
         uses: actions/upload-artifact@v1
