--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "build:ci": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint"
   },
