--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -40,9 +40,10 @@ jobs:
           name: deploy_dist
           path: dist
   deploy:
-    name: Deploy to Azure
+    name: Deploy to Prod
     runs-on: ubuntu-latest
     needs: build
+    environment: prod
     if: github.event_name != 'pull_request'
     steps:
       - name: Checkout
