--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -56,12 +56,12 @@ jobs:
         with:
           name: deploy_dist
       - name: "Say Hello"
-        run: echo "Hello storage $STORAGE_ACCOUNT_NAME!"     
+        run: echo "Hello storage $STORAGE_ACCOUNT_NAME!"
       - name: Delete blob storage
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob delete-batch --source '$web' --account-name $STORAGE_ACCOUNT_NAME
+            az storage blob delete-batch --source '$web' --account-name $STORAGE_ACCOUNT_NAME --auth-mode
       - name: Upload to blob storage
         uses: azure/CLI@v1
         with:
@@ -71,7 +71,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob update --account-name $STORAGE_ACCOUNT_NAME --container-name '$web' --name 'index.html' --content-cache-control 'no-cache'
+            az storage blob update --account-name $STORAGE_ACCOUNT_NAME --auth-mode --container-name '$web' --name 'index.html' --content-cache-control 'no-cache'
       - name: logout
         run: |
           az logout
