--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -56,22 +56,22 @@ jobs:
         with:
           name: deploy_dist
       - name: "Say Hello"
-        run: echo "Hello storage $STORAGE_ACCOUNT_NAME!"
+        run: echo "Hello storage ${{env.STORAGE_ACCOUNT_NAME}}!"
       - name: Delete blob storage
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob delete-batch --source '$web' --account-name $STORAGE_ACCOUNT_NAME --auth-mode
+            az storage blob delete-batch --source '$web' --account-name ${{env.STORAGE_ACCOUNT_NAME}} --auth-mode
       - name: Upload to blob storage
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob upload-batch --account-name $STORAGE_ACCOUNT_NAME --auth-mode key -d '$web' -s ./deploy_dist/$PROJECT_NAME --overwrite
+            az storage blob upload-batch --account-name ${{env.STORAGE_ACCOUNT_NAME}} --auth-mode key -d '$web' -s ./deploy_dist/$PROJECT_NAME --overwrite
       - name: Change index.html content-cache-control header
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az storage blob update --account-name $STORAGE_ACCOUNT_NAME --auth-mode --container-name '$web' --name 'index.html' --content-cache-control 'no-cache'
+            az storage blob update --account-name ${{env.STORAGE_ACCOUNT_NAME}} --auth-mode --container-name '$web' --name 'index.html' --content-cache-control 'no-cache'
       - name: logout
         run: |
           az logout
