--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-select/ng-select": "^11.1.1",
     "@stedi/prettier-plugin-jsonata": "^2.0.0",
     "bootstrap": "^5.2.3",
     "js-yaml": "^4.1.0",
