--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,6 +41,7 @@ jobs:
           path: dist
   deploy:
     name: Deploy to Prod
+    environment: prod
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name != 'pull_request'
