--- a/package.json
+++ b/package.json
@@ -12,45 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.2.2",
-    "@angular/common": "^17.2.2",
-    "@angular/compiler": "^17.2.2",
-    "@angular/core": "^17.2.2",
-    "@angular/forms": "^17.2.2",
-    "@angular/platform-browser": "^17.2.2",
-    "@angular/platform-browser-dynamic": "^17.2.2",
-    "@angular/router": "^17.2.2",
-    "@ng-select/ng-select": "^12.0.6",
-    "@stedi/prettier-plugin-jsonata": "^2.0.0",
-    "bootstrap": "^5.2.3",
+    "@angular/animations": "^19.2.5",
+    "@angular/common": "^19.2.5",
+    "@angular/compiler": "^19.2.5",
+    "@angular/core": "^19.2.5",
+    "@angular/forms": "^19.2.5",
+    "@angular/platform-browser": "^19.2.5",
+    "@angular/platform-browser-dynamic": "^19.2.5",
+    "@angular/router": "^19.2.5",
+    "@ng-select/ng-select": "^14.2.6",
+    "@stedi/prettier-plugin-jsonata": "^2.1.3",
+    "bootstrap": "^5.3.5",
     "js-yaml": "^4.1.0",
-    "monaco-editor": "^0.44.0",
-    "ngx-bootstrap": "^12.0.0",
-    "ngx-monaco-editor-v2": "^17.0.1",
-    "prettier": "^3.2.5",
-    "rxjs": "~7.8.0",
-    "sql-formatter": "^13.0.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.4"
+    "monaco-editor": "^0.52.2",
+    "ngx-bootstrap": "^19.0.2",
+    "ngx-monaco-editor-v2": "^19.0.2",
+    "rxjs": "~7.8.2",
+    "sql-formatter": "^15.5.2",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.1",
-    "@angular-eslint/builder": "17.2.1",
-    "@angular-eslint/schematics": "17.2.1",
-    "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "~17.2.1",
-    "@angular/compiler-cli": "^17.2.2",
-    "@types/jasmine": "~4.3.0",
-    "@types/js-yaml": "^4.0.6",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.53.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "^19.2.6",
+    "@angular-eslint/builder": "19.3.0",
+    "@angular-eslint/schematics": "19.3.0",
+    "@angular-eslint/template-parser": "19.3.0",
+    "@angular/cli": "~19.2.6",
+    "@angular/compiler-cli": "^19.2.5",
+    "@types/jasmine": "~5.1.7",
+    "@types/js-yaml": "^4.0.9",
+    "angular-eslint": "^19.3.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.6",
+    "jasmine-core": "~5.6.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "style-loader": "^3.3.3",
-    "typescript": "~5.3.3"
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
+    "style-loader": "^4.0.0",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.29.0"
   }
 }
