--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# This is a workflow to build a Docker image and deploy it to Docker Hub
 
-name: CI
+name: Docker CI/CD
 
 # Controls when the workflow will run
 on:
@@ -9,12 +9,15 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 env:
   PROJECT_NAME: utilplex
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  DOCKER_HUB_REPOSITORY: ${{ vars.DOCKER_HUB_REPOSITORY || 'utilplex' }}
+  IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   build:
@@ -22,55 +25,77 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Use Node 18.x
-        uses: actions/setup-node@v1
+      
+      - name: Set up Node 18.x
+        uses: actions/setup-node@v3
         with:
           node-version: "18.x"
+          cache: 'npm'
+      
       - name: Install dependencies
         run: npm ci
+      
       - name: Build
         run: npm run build:ci
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build and export Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          load: true
+          tags: ${{ env.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_HUB_REPOSITORY }}:${{ env.IMAGE_TAG }}
+      
+      - name: Test Docker image
+        run: |
+          docker run --rm ${{ env.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_HUB_REPOSITORY }}:${{ env.IMAGE_TAG }} echo "Docker image built successfully"
+      
       - name: Archive build
         if: success()
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
-          name: deploy_dist
-          path: dist
+          name: docker_meta
+          path: |
+            .docker/
+            Dockerfile
+            docker-compose.yml
+          if-no-files-found: ignore
+
   deploy:
-    name: Deploy to Prod
+    name: Deploy to Docker Hub
     environment: prod
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name != 'pull_request'
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
-      - uses: azure/login@v1
+        uses: actions/checkout@v3
+      
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Download build
-        uses: actions/download-artifact@v1
+          name: docker_meta
+          path: .
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          name: deploy_dist
-      - name: Delete blob storage
-        uses: azure/CLI@v1
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
         with:
-          inlineScript: |
-            az storage blob delete-batch --source '$web' --account-name ${{vars.STORAGE_ACCOUNT_NAME}} --auth-mode key
-      - name: Upload to blob storage
-        uses: azure/CLI@v1
-        with:
-          inlineScript: |
-            az storage blob upload-batch --account-name ${{vars.STORAGE_ACCOUNT_NAME}} --auth-mode key -d '$web' -s ./deploy_dist/$PROJECT_NAME --overwrite
-      - name: Change index.html content-cache-control header
-        uses: azure/CLI@v1
-        with:
-          inlineScript: |
-            az storage blob update --account-name ${{vars.STORAGE_ACCOUNT_NAME}} --auth-mode key --container-name '$web' --name 'index.html' --content-cache-control 'no-cache'
-      - name: logout
-        run: |
-          az logout
-        if: always()
+          context: .
+          push: true
+          tags: |
+            ${{ env.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_HUB_REPOSITORY }}:${{ env.IMAGE_TAG }}
+            ${{ env.DOCKER_HUB_USERNAME }}/${{ env.DOCKER_HUB_REPOSITORY }}:latest
