--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "build:ci": "ng build --configuration production",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "serve:ssr:utilplex": "node dist/utilplex/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -19,10 +20,13 @@
     "@angular/forms": "^19.2.5",
     "@angular/platform-browser": "^19.2.5",
     "@angular/platform-browser-dynamic": "^19.2.5",
+    "@angular/platform-server": "^19.2.5",
     "@angular/router": "^19.2.5",
+    "@angular/ssr": "^19.2.6",
     "@ng-select/ng-select": "^14.2.6",
     "@stedi/prettier-plugin-jsonata": "^2.1.3",
     "bootstrap": "^5.3.5",
+    "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "monaco-editor": "^0.52.2",
     "ngx-bootstrap": "^19.0.2",
@@ -39,8 +43,10 @@
     "@angular-eslint/template-parser": "19.3.0",
     "@angular/cli": "~19.2.6",
     "@angular/compiler-cli": "^19.2.5",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.7",
     "@types/js-yaml": "^4.0.9",
+    "@types/node": "^18.18.0",
     "angular-eslint": "^19.3.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
