--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ng-select/ng-select": "^14.2.6",
     "@stedi/prettier-plugin-jsonata": "^2.1.3",
     "bootstrap": "^5.3.5",
-    "express": "^5.1.0",
+    "express": "~4.21.2",
     "js-yaml": "^4.1.0",
     "monaco-editor": "^0.52.2",
     "ngx-bootstrap": "^19.0.2",
@@ -43,7 +43,7 @@
     "@angular-eslint/template-parser": "19.3.0",
     "@angular/cli": "~19.2.6",
     "@angular/compiler-cli": "^19.2.5",
-    "@types/express": "^5.0.1",
+    "@types/express": "~4.17.21",
     "@types/jasmine": "~5.1.7",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.14.0",
