feat: add sitemap.xml endpoint and robots.txt for SEO; include xmlbuilder dependenc

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
                 "output": "/assets/monaco/"
               },
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+              "src/sitemap.xml"
             ],
             "styles": [
               "src/styles.scss"
@@ -100,7 +102,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+               "src/sitemap.xml"
             ],
             "styles": [
               "src/styles.scss"
