--- a/package.json
+++ b/package.json
@@ -13,44 +13,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.10",
-    "@angular/common": "^19.2.10",
-    "@angular/compiler": "^19.2.10",
-    "@angular/core": "^19.2.10",
-    "@angular/forms": "^19.2.10",
-    "@angular/platform-browser": "^19.2.10",
-    "@angular/platform-browser-dynamic": "^19.2.10",
-    "@angular/platform-server": "^19.2.10",
-    "@angular/router": "^19.2.10",
-    "@angular/ssr": "^19.2.12",
-    "@ng-select/ng-select": "^14.7.0",
-    "@stedi/prettier-plugin-jsonata": "^2.1.3",
+    "@angular/animations": "^20.0.3",
+    "@angular/common": "^20.0.3",
+    "@angular/compiler": "^20.0.3",
+    "@angular/core": "^20.0.3",
+    "@angular/forms": "^20.0.3",
+    "@angular/platform-browser": "^20.0.3",
+    "@angular/platform-browser-dynamic": "^20.0.3",
+    "@angular/platform-server": "^20.0.3",
+    "@angular/router": "^20.0.3",
+    "@angular/ssr": "^20.0.2",
+    "@ng-select/ng-select": "^15.1.2",
+    "@stedi/prettier-plugin-jsonata": "^2.1.4",
     "express": "~4.21.2",
     "js-yaml": "^4.1.0",
     "monaco-editor": "^0.52.2",
-    "ngx-bootstrap": "^19.0.2",
-    "ngx-monaco-editor-v2": "^19.0.2",
     "rxjs": "~7.8.2",
-    "sql-formatter": "^15.6.1",
+    "sql-formatter": "^15.6.4",
     "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.12",
-    "@angular-eslint/builder": "19.4.0",
-    "@angular-eslint/schematics": "19.4.0",
-    "@angular-eslint/template-parser": "19.4.0",
-    "@angular/cli": "~19.2.12",
-    "@angular/compiler-cli": "^19.2.10",
+    "@angular-eslint/builder": "20.1.0",
+    "@angular-eslint/schematics": "20.1.0",
+    "@angular-eslint/template-parser": "20.1.0",
+    "@angular/build": "^20.0.2",
+    "@angular/cli": "~20.0.2",
+    "@angular/compiler-cli": "^20.0.3",
     "@types/express": "~4.17.21",
     "@types/jasmine": "~5.1.8",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.15.18",
-    "angular-eslint": "^19.4.0",
-    "eslint": "^9.26.0",
+    "@types/node": "^24.0.3",
+    "angular-eslint": "^20.1.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "jasmine-core": "~5.7.1",
+    "eslint-plugin-prettier": "^5.5.0",
+    "jasmine-core": "~5.8.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -60,6 +58,6 @@
     "prettier-eslint": "^16.4.2",
     "style-loader": "^4.0.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.34.1"
   }
 }
