feat: refactor sidebar component for collapsible functionality and improve styling
- Removed MonacoConfig interface as it is no longer needed.
- Enhanced sidebar component to support collapsing with toggle button.
- Updated sidebar styles for better responsiveness and visual appeal.
- Implemented signal-based state management for sidebar collapse state.
- Refactored time zones component to utilize signals for state management.
- Added Dracula theme for CodeMirror editor with custom styling.
- Introduced language extensions for CodeMirror to support various languages.
- Created a diff editor component using CodeMirror for comparing code.
- Developed a CodeMirror editor component with enhanced features and styling.
- Implemented TypeScript formatting service using Prettier for code formatting.
- Created a dedicated component for TypeScript formatting with UI integration.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@acrodata/code-editor": "^0.5.1",
     "@angular/animations": "^20.1.6",
     "@angular/common": "^20.1.6",
     "@angular/compiler": "^20.1.6",
@@ -23,11 +24,23 @@
     "@angular/platform-server": "^20.1.6",
     "@angular/router": "^20.1.6",
     "@angular/ssr": "^20.1.5",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-sql": "^6.9.1",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/lang-yaml": "^6.1.2",
+    "@codemirror/language": "^6.11.2",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.1",
+    "@lezer/highlight": "^1.2.1",
     "@ng-select/ng-select": "^20.1.0",
     "@stedi/prettier-plugin-jsonata": "^2.1.5",
+    "codemirror": "^6.0.2",
     "express": "~4.21.2",
     "js-yaml": "^4.1.0",
-    "monaco-editor": "^0.52.2",
+    "prettier": "^3.6.2",
     "rxjs": "~7.8.2",
     "sql-formatter": "^15.6.6",
     "tslib": "^2.8.1",
